frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: tasks-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccount: tasks-app-account
      containers:
      - name: frontend
        image: sesaquecruz/react-tasks-app:0.3.0
        resources:
          requests: 
            cpu: "0.15"
            memory: 150Mi
          limits:
            cpu: "0.25"
            memory: 250Mi
        startupProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 5
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 5
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 5
          successThreshold: 1
        ports:
        - containerPort: 8080
