frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: tasks-app
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
